--- a/SGSFramework.Core/SGSFramework.Core/SGSFramework.Core.csproj
+++ b/SGSFramework.Core/SGSFramework.Core/SGSFramework.Core.csproj
@@ -4,11 +4,11 @@
     <TargetFramework>net48</TargetFramework>
     <PlatformTarget>x64</PlatformTarget>
 	  <AssemblyTitle>This is the program for hierarchical block assembly</AssemblyTitle>
-    <BaseOutputPath>D:\研究所\SLBlock\StringGRxShape_Compiler\bin</BaseOutputPath>
+    <BaseOutputPath>D:\研究所\SLBlock\SGSFramework\bin\</BaseOutputPath>
 	  <Company>GAS Lab</Company>
 	  <AssemblyVersion>1.0.0.0</AssemblyVersion>
 	  <Platforms>AnyCPU;x64</Platforms>
-	  <Version>1.1.3</Version>
+	  <Version>1.2.0</Version>
 	  <Description>This project is used for reseach purpose. We try to program a method for parsing block with guidelines heirarchically.</Description>
 	  <PackageVersion>1.0.0</PackageVersion>
   </PropertyGroup>
